--- a/index.html
+++ b/index.html
@@ -837,6 +837,11 @@
       name: "Thunder370",
       avatar: "https://avatars.akamai.steamstatic.com/e4c0a776a7b3ee3a933fcf5df84ccaaa5ca964fd_full.jpg"
     },
+    {
+      steamId: "",
+      name: "caiomarquezine",
+      avatar: "https://avatars.akamai.steamstatic.com/2f11921620b1abcead03a9e321fb5a35b4b2fe0a_full.jpg"
+    }
   ];
 
   /* =========================================================
