--- a/index.html
+++ b/index.html
@@ -841,6 +841,11 @@
       steamId: "",
       name: "caiomarquezine",
       avatar: "https://avatars.akamai.steamstatic.com/2f11921620b1abcead03a9e321fb5a35b4b2fe0a_full.jpg"
+    },
+    {
+      steamId: "",
+      name: "⛄arthur⛄",
+      avatar: "https://avatars.fastly.steamstatic.com/dd67ac2a928cdaf6916208ab59c873478a332db5_full.jpg"
     }
   ];
 
