--- a/index.html
+++ b/index.html
@@ -846,6 +846,11 @@
       steamId: "",
       name: "⛄arthur⛄",
       avatar: "https://avatars.fastly.steamstatic.com/dd67ac2a928cdaf6916208ab59c873478a332db5_full.jpg"
+    },
+    {
+      steamId: "",
+      name: "GabrielKLBr",
+      avatar: "https://avatars.fastly.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg"
     }
   ];
 
