--- a/index.html
+++ b/index.html
@@ -851,6 +851,11 @@
       steamId: "",
       name: "GabrielKLBr",
       avatar: "https://avatars.fastly.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg"
+    },
+    {
+      steamId: "",
+      name: "epic",
+      avatar: "https://shared.fastly.steamstatic.com/community_assets/images/items/814540/d81f551aa6632cad534642e51a061cd112dd214d.gif"
     }
   ];
 
