--- a/index.html
+++ b/index.html
@@ -804,16 +804,6 @@
   var VIPS = [
     {
       steamId: "",
-      name: "Gabe",
-      avatar: "https://avatars.steamstatic.com/c94633f1303787c7164b7833b0d964e87dc1217d_full.jpg"
-    },
-    {
-      steamId: "",
-      name: "luis29dan",
-      avatar: "https://avatars.steamstatic.com/12ea6ecd7e0b241345564ba2e6e1fb61160669e2_full.jpg"
-    },
-    {
-      steamId: "",
       name: "Sheva",
       avatar: "https://avatars.steamstatic.com/0650a97d7708b948a87e28c4b7c07ca9f268b073_full.jpg"
     },
@@ -856,6 +846,21 @@
       steamId: "",
       name: "epic",
       avatar: "https://shared.fastly.steamstatic.com/community_assets/images/items/814540/d81f551aa6632cad534642e51a061cd112dd214d.gif"
+    },
+    {
+      steamId: "",
+      name: "Medic_Teorias",
+      avatar: "https://avatars.fastly.steamstatic.com/bb926607cdd142a287181b29ac149e82406d0358_full.jpg"
+    },
+    {
+      steamId: "",
+      name: "pietroom",
+      avatar: "https://avatars.fastly.steamstatic.com/3804917ea3fed0a0e642a86f9cf7ba64562fe307_full.jpg"
+    },
+    {
+      steamId: "",
+      name: "toshiba",
+      avatar: "https://avatars.fastly.steamstatic.com/09dee4b78688c03e6e1181947f9f7ecbd73ce018_full.jpg"
     }
   ];
 
