--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
        CONFIG VISUAL
        ========================================================= */
     :root{
-      --bg: #e9edf3;
+      /* >>> APLICADO: MESMA MUDANÇA (menos escuro) <<< */
+      --bg: #2a3145;               /* fallback mais escuro porém confortável */
+      --bg-brightness: 0.82;       /* clareia a imagem */
+      --bg-saturate: 1.02;
+      --bg-contrast: 1.00;
 
       /* CARDS MAIS TRANSPARENTES */
       --glass: rgba(255,255,255,0.50);
@@ -58,7 +62,7 @@
       min-height: 100vh;
       margin: 0;
       overflow: hidden;         /* padrão: sem scroll */
-      background: var(--bg);    /* fallback NÃO preto */
+      background: var(--bg);    /* fallback */
     }
 
     body {
@@ -80,7 +84,26 @@
       z-index: 0;
       overflow: hidden;
       pointer-events: none;
+
       background: var(--bg);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    /* >>> overlay leve (metade do “escuro”) <<< */
+    .bg-layer::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      z-index: 1;
+      background:
+        radial-gradient(circle at 50% 30%,
+          rgba(0,0,0,0.02),
+          rgba(0,0,0,0.15) 70%),
+        linear-gradient(180deg,
+          rgba(0,0,0,0.09),
+          rgba(0,0,0,0.18));
     }
 
     .bg-layer img{
@@ -90,6 +113,12 @@
       min-width: 50%;
       min-height: 50%;
       transform: scale(1.05);
+
+      z-index: 0;
+      filter:
+        brightness(var(--bg-brightness))
+        saturate(var(--bg-saturate))
+        contrast(var(--bg-contrast));
     }
 
     /* =========================================================
@@ -131,18 +160,9 @@
     }
 
     /* primeira linha */
-    .card-ttt {
-      grid-column: 1;
-      grid-row: 1;
-    }
-    .card-vipclub {
-      grid-column: 2;
-      grid-row: 1;
-    }
-    .card-rules {
-      grid-column: 3;
-      grid-row: 1;
-    }
+    .card-ttt { grid-column: 1; grid-row: 1; }
+    .card-vipclub { grid-column: 2; grid-row: 1; }
+    .card-rules { grid-column: 3; grid-row: 1; }
 
     /* VIP na segunda linha – largura controlada via JS (grid-column) */
     .card-vips {
@@ -287,8 +307,8 @@
     /* VIPs em colunas com no máximo 4 por coluna */
     .vip-list{
       display:grid;
-      grid-template-rows: repeat(4, auto); /* até 4 VIPs por coluna */
-      grid-auto-flow: column;              /* preenche coluna primeiro, depois abre outra */
+      grid-template-rows: repeat(4, auto);
+      grid-auto-flow: column;
       row-gap: 8px;
       column-gap: 8px;
       padding-right: 4px;
@@ -446,14 +466,12 @@
          0.7px  0.7px 0 rgba(255,255,255,0.9);
     }
 
-    /* área inferior: loading-bar + créditos separados */
     .bottom-area{
       display: flex;
       flex-direction: column;
       gap: 6px;
     }
 
-    /* cardzinho separado de créditos */
     .credits-card{
       width: fit-content;
       max-width: 90%;
@@ -470,199 +488,70 @@
 
     /* =========================================================
        RESPONSIVIDADE POR LARGURA
-       (mantendo o grid geral)
        ========================================================= */
-
-    /* 1280px: compacta um pouco */
     @media (max-width: 1280px){
-      .container{
-        max-width: 1200px;
-        margin-top: 2%;
-      }
-
-      .wrap{
-        padding: 10px var(--pad-x);
-      }
-
-      .glass-card,
-      .vip-box,
-      .loading-bar{
-        border-radius: 22px;
-        padding: 10px 14px;
-      }
-
-      .rules-list{
-        font-size: var(--fs-md);
-      }
+      .container{ max-width: 1200px; margin-top: 2%; }
+      .wrap{ padding: 10px var(--pad-x); }
+      .glass-card, .vip-box, .loading-bar{ border-radius: 22px; padding: 10px 14px; }
+      .rules-list{ font-size: var(--fs-md); }
     }
 
-    /* 1024px: fontes menores e alturas reduzidas */
     @media (max-width: 1024px){
-      :root{
-        --fs-xs: 10px;
-        --fs-sm: 11px;
-        --fs-md: 12px;
-        --fs-lg: 13px;
-        --fs-xl: 18px;
-        --fs-2xl: 22px;
-      }
-
-      .container{
-        max-width: 1150px;
-        margin-top: 2%;
-      }
-
-      .glass-card{
-        min-height: 130px;
-      }
-
-      .vip-box{
-        min-height: 140px;
-      }
-
-      .server-name{
-        letter-spacing: 0.14em;
-      }
+      :root{ --fs-xs: 10px; --fs-sm: 11px; --fs-md: 12px; --fs-lg: 13px; --fs-xl: 18px; --fs-2xl: 22px; }
+      .container{ max-width: 1150px; margin-top: 2%; }
+      .glass-card{ min-height: 130px; }
+      .vip-box{ min-height: 140px; }
+      .server-name{ letter-spacing: 0.14em; }
     }
 
-    /* 820px: ainda mesmo grid, tudo mais miudinho */
     @media (max-width: 820px){
-      .container{
-        max-width: 1100px;
-        margin-top: 0;
-      }
-
-      .wrap{
-        padding: 8px 10px;
-        gap: 8px;
-      }
-
-      .glass-card,
-      .vip-box{
-        padding: 8px 10px;
-        gap: 6px;
-      }
-
-      .rules-list{
-        gap: 4px;
-      }
-
-      .vip-avatar{
-        width: 32px;
-        height: 32px;
-      }
+      .container{ max-width: 1100px; margin-top: 0; }
+      .wrap{ padding: 8px 10px; gap: 8px; }
+      .glass-card, .vip-box{ padding: 8px 10px; gap: 6px; }
+      .rules-list{ gap: 4px; }
+      .vip-avatar{ width: 32px; height: 32px; }
     }
 
-    /* 640px: versão bem compacta */
     @media (max-width: 640px){
-      :root{
-        --fs-xs: 9px;
-        --fs-sm: 10px;
-        --fs-md: 11px;
-        --fs-lg: 12px;
-        --fs-xl: 16px;
-        --fs-2xl: 18px;
-      }
-
-      .container{
-        max-width: 900px;
-      }
-
-      .wrap{
-        padding: 6px 8px;
-        gap: 6px;
-      }
-
-      .glass-card,
-      .vip-box{
-        padding: 8px 9px;
-        border-radius: 18px;
-      }
-
-      .loading-bottom{
-        gap: 4px;
-      }
-
-      .file{
-        max-width: 85vw;
-      }
-
-      .ttt-subtitle{
-        font-size: var(--fs-xs);
-      }
+      :root{ --fs-xs: 9px; --fs-sm: 10px; --fs-md: 11px; --fs-lg: 12px; --fs-xl: 16px; --fs-2xl: 18px; }
+      .container{ max-width: 900px; }
+      .wrap{ padding: 6px 8px; gap: 6px; }
+      .glass-card, .vip-box{ padding: 8px 9px; border-radius: 18px; }
+      .loading-bottom{ gap: 4px; }
+      .file{ max-width: 85vw; }
+      .ttt-subtitle{ font-size: var(--fs-xs); }
     }
 
     /* =========================================================
        RESPONSIVIDADE POR ALTURA
        ========================================================= */
-
-    /* >>> <=800px de altura -> libera scroll e reduz espaços */
     @media (max-height: 800px){
-      html, body{
-        overflow-y: auto;
-        overflow-x: hidden;
-      }
+      html, body{ overflow-y: auto; overflow-x: hidden; }
       .container{ margin-top: 0; }
-      .wrap{
-        height: auto;
-        min-height: 100vh;
-        padding: 8px 10px;
-        gap: 8px;
-      }
+      .wrap{ height: auto; min-height: 100vh; padding: 8px 10px; gap: 8px; }
       .top-grid{ gap: 8px; }
-      .glass-card{
-        min-height: 120px;
-        padding: 10px 12px;
-      }
-      .vip-box{
-        min-height: 130px;
-        padding: 9px 12px;
-      }
-      .loading-bar{
-        padding: 8px 10px;
-        gap: 6px;
-      }
-      .status{
-        white-space: normal;
-        max-width: none;
-      }
-      /* remove o "espaço do meio" quando a altura é baixa */
+      .glass-card{ min-height: 120px; padding: 10px 12px; }
+      .vip-box{ min-height: 130px; padding: 9px 12px; }
+      .loading-bar{ padding: 8px 10px; gap: 6px; }
+      .status{ white-space: normal; max-width: none; }
       .container > div:nth-child(2){ display: none; }
     }
 
-    /* >>> <=650px de altura (ex: 800x600) -> versão mais compacta */
     @media (max-height: 650px){
       .wrap{ padding: 6px 8px; gap: 6px; }
       .top-grid{ gap: 6px; }
-
-      .glass-card, .vip-box{
-        min-height: 100px;
-        padding: 8px 10px;
-      }
-
+      .glass-card, .vip-box{ min-height: 100px; padding: 8px 10px; }
       .ttt-header{ font-size: var(--fs-lg); }
       .ttt-subtitle{ font-size: var(--fs-xs); }
-
-      .server-name{
-        font-size: clamp(18px, 4vw, 26px);
-        letter-spacing: 0.12em;
-      }
-
+      .server-name{ font-size: clamp(18px, 4vw, 26px); letter-spacing: 0.12em; }
       .loading-top{ gap: 6px; }
       .loading-bottom{ font-size: var(--fs-xs); }
       .rule-num{ min-width: 30px; min-height: 30px; font-size: clamp(14px, 3vw, 18px); }
     }
 
-    /* >>> <=520px de altura (stress) */
     @media (max-height: 520px){
       .card-vips{ width: 100%; }
-
-      .glass-card, .vip-box{
-        min-height: auto;
-        gap: 6px;
-        padding: 8px 10px;
-      }
-
+      .glass-card, .vip-box{ min-height: auto; gap: 6px; padding: 8px 10px; }
       .ttt-subtitle{ display:none; }
       .rules-list{ font-size: var(--fs-sm); }
       .vip-card{ padding: 6px 8px; }
@@ -778,7 +667,6 @@
           </div>
         </div>
 
-        <!-- cardzinho separado -->
         <div class="credits-card">
           Feito por: <b>Sushi</b> e <b>Hanic</b>
         </div>
@@ -802,66 +690,18 @@
   };
 
   var VIPS = [
-    {
-      steamId: "",
-      name: "Sheva",
-      avatar: "https://avatars.steamstatic.com/0650a97d7708b948a87e28c4b7c07ca9f268b073_full.jpg"
-    },
-    {
-      steamId: "",
-      name: "₊✩‧₊˚౨ ST4R ৎ˚₊",
-      avatar: "https://avatars.steamstatic.com/d6819b610b1143095fd1f413c6dd0f2fd663a622_full.jpg"
-    },
-{
-      steamId: "",
-      name: " Tank evans",
-      avatar: "https://avatars.akamai.steamstatic.com/61852d1e3db180b1173dcf851c5b54aaafa82876_full.jpg"
-    },
-{
-      steamId: "",
-      name: "memez",
-      avatar: "https://avatars.akamai.steamstatic.com/c23c156a29482817ddc9fa5b1640cf4426d30631_full.jpg"
-    },
-{
-      steamId: "",
-      name: "Thunder370",
-      avatar: "https://avatars.akamai.steamstatic.com/e4c0a776a7b3ee3a933fcf5df84ccaaa5ca964fd_full.jpg"
-    },
-    {
-      steamId: "",
-      name: "caiomarquezine",
-      avatar: "https://avatars.akamai.steamstatic.com/2f11921620b1abcead03a9e321fb5a35b4b2fe0a_full.jpg"
-    },
-    {
-      steamId: "",
-      name: "⛄arthur⛄",
-      avatar: "https://avatars.fastly.steamstatic.com/dd67ac2a928cdaf6916208ab59c873478a332db5_full.jpg"
-    },
-    {
-      steamId: "",
-      name: "GabrielKLBr",
-      avatar: "https://avatars.fastly.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg"
-    },
-    {
-      steamId: "",
-      name: "epic",
-      avatar: "https://shared.fastly.steamstatic.com/community_assets/images/items/814540/d81f551aa6632cad534642e51a061cd112dd214d.gif"
-    },
-    {
-      steamId: "",
-      name: "Medic_Teorias",
-      avatar: "https://avatars.fastly.steamstatic.com/bb926607cdd142a287181b29ac149e82406d0358_full.jpg"
-    },
-    {
-      steamId: "",
-      name: "pietroom",
-      avatar: "https://avatars.fastly.steamstatic.com/3804917ea3fed0a0e642a86f9cf7ba64562fe307_full.jpg"
-    },
-    {
-      steamId: "",
-      name: "toshiba",
-      avatar: "https://avatars.fastly.steamstatic.com/09dee4b78688c03e6e1181947f9f7ecbd73ce018_full.jpg"
-    }
+    { steamId: "", name: "Sheva", avatar: "https://avatars.steamstatic.com/0650a97d7708b948a87e28c4b7c07ca9f268b073_full.jpg" },
+    { steamId: "", name: "₊✩‧₊˚౨ ST4R ৎ˚₊", avatar: "https://avatars.steamstatic.com/d6819b610b1143095fd1f413c6dd0f2fd663a622_full.jpg" },
+    { steamId: "", name: " Tank evans", avatar: "https://avatars.akamai.steamstatic.com/61852d1e3db180b1173dcf851c5b54aaafa82876_full.jpg" },
+    { steamId: "", name: "memez", avatar: "https://avatars.akamai.steamstatic.com/c23c156a29482817ddc9fa5b1640cf4426d30631_full.jpg" },
+    { steamId: "", name: "Thunder370", avatar: "https://avatars.akamai.steamstatic.com/e4c0a776a7b3ee3a933fcf5df84ccaaa5ca964fd_full.jpg" },
+    { steamId: "", name: "caiomarquezine", avatar: "https://avatars.akamai.steamstatic.com/2f11921620b1abcead03a9e321fb5a35b4b2fe0a_full.jpg" },
+    { steamId: "", name: "⛄arthur⛄", avatar: "https://avatars.fastly.steamstatic.com/dd67ac2a928cdaf6916208ab59c873478a332db5_full.jpg" },
+    { steamId: "", name: "GabrielKLBr", avatar: "https://avatars.fastly.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg" },
+    { steamId: "", name: "epic", avatar: "https://shared.fastly.steamstatic.com/community_assets/images/items/814540/d81f551aa6632cad534642e51a061cd112dd214d.gif" },
+    { steamId: "", name: "jão da obra", avatar: "https://avatars.fastly.steamstatic.com/56ad28cce354371e62b47e126c29958a1b7dcd2c_full.jpg" },
+    { steamId: "", name: "pietroom", avatar: "https://avatars.fastly.steamstatic.com/3804917ea3fed0a0e642a86f9cf7ba64562fe307_full.jpg" },
+    { steamId: "", name: "toshiba", avatar: "https://avatars.fastly.steamstatic.com/09dee4b78688c03e6e1181947f9f7ecbd73ce018_full.jpg" }
   ];
 
   /* =========================================================
@@ -873,11 +713,8 @@
     if(!LOADING_CONFIG.backgroundImages || LOADING_CONFIG.backgroundImages.length === 0) return;
 
     var url = LOADING_CONFIG.backgroundImages[0];
-
-    // seta imediato no layer (fundo)
     layer.style.backgroundImage = "url('" + url + "')";
 
-    // preload opcional
     var pre = new Image();
     pre.src = url;
   })();
@@ -886,16 +723,11 @@
     var imgEl = document.getElementById("bg-img");
     if(!imgEl) return;
 
-    // URL absoluta (evita bug de relativo no CEF)
     var ABS_BG = "https://hanicbr.github.io/backtttloading/assets/bg.png";
 
     var pre = new Image();
-    pre.onload = function(){
-      imgEl.src = ABS_BG;
-    };
-    pre.onerror = function(){
-      // fallback opcional
-    };
+    pre.onload = function(){ imgEl.src = ABS_BG; };
+    pre.onerror = function(){};
 
     pre.src = ABS_BG + (ABS_BG.indexOf("?") === -1 ? "?" : "&") + "v=" + Date.now();
   })();
@@ -921,24 +753,20 @@
       list.appendChild(card);
     }
 
-    // ajusta tamanho/posição do card de VIP conforme quantidade
     var box = document.querySelector(".card-vips");
     if(box){
       var count = VIPS.length;
-      var cols = Math.ceil(count / 4) || 1;  // 4 por coluna
+      var cols = Math.ceil(count / 4) || 1;
 
       if(cols <= 1){
-        // até 4 VIPs -> card do meio, mesma largura dos outros
         box.style.gridColumn = "2 / span 1";
         box.style.maxWidth  = "100%";
         box.style.margin    = "0";
       } else if(cols === 2){
-        // 5–8 VIPs -> visualmente 2 colunas, mas CENTRALIZADO
         box.style.gridColumn = "1 / span 3";
         box.style.maxWidth   = "66.666%";
         box.style.margin     = "0 auto";
       } else {
-        // 9+ VIPs -> ocupa a linha toda (3 colunas)
         box.style.gridColumn = "1 / span 3";
         box.style.maxWidth   = "100%";
         box.style.margin     = "0";
@@ -959,9 +787,7 @@
     function tryPlay(){
       try {
         var p = audio.play();
-        if(p && typeof p.catch === "function"){
-          p.catch(function(){});
-        }
+        if(p && typeof p.catch === "function"){ p.catch(function(){}); }
       } catch(e){}
     }
 
