--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
 
   var VIPS = [
     { steamId: "", name: "Sheva", avatar: "https://avatars.steamstatic.com/0650a97d7708b948a87e28c4b7c07ca9f268b073_full.jpg" },
-    { steamId: "", name: "₊✩‧₊˚౨ ST4R ৎ˚₊", avatar: "https://avatars.steamstatic.com/d6819b610b1143095fd1f413c6dd0f2fd663a622_full.jpg" },
+    { steamId: "", name: "chico tekito", avatar: "https://avatars.fastly.steamstatic.com/75bb2a0541d607eaed4e09c8d1e68413a2cbb58a_full.jpg" },
     { steamId: "", name: " Tank evans", avatar: "https://avatars.akamai.steamstatic.com/61852d1e3db180b1173dcf851c5b54aaafa82876_full.jpg" },
     { steamId: "", name: "memez", avatar: "https://avatars.akamai.steamstatic.com/c23c156a29482817ddc9fa5b1640cf4426d30631_full.jpg" },
     { steamId: "", name: "Thunder370", avatar: "https://avatars.akamai.steamstatic.com/e4c0a776a7b3ee3a933fcf5df84ccaaa5ca964fd_full.jpg" },
@@ -700,7 +700,7 @@
     { steamId: "", name: "GabrielKLBr", avatar: "https://avatars.fastly.steamstatic.com/fef49e7fa7e1997310d705b2a6158ff8dc1cdfeb_full.jpg" },
     { steamId: "", name: "epic", avatar: "https://shared.fastly.steamstatic.com/community_assets/images/items/814540/d81f551aa6632cad534642e51a061cd112dd214d.gif" },
     { steamId: "", name: "jão da obra", avatar: "https://avatars.fastly.steamstatic.com/56ad28cce354371e62b47e126c29958a1b7dcd2c_full.jpg" },
-    { steamId: "", name: "pietroom", avatar: "https://avatars.fastly.steamstatic.com/3804917ea3fed0a0e642a86f9cf7ba64562fe307_full.jpg" },
+    { steamId: "", name: "tutuzinhorod", avatar: "https://avatars.fastly.steamstatic.com/0b7e2573fada1ef30de1e09e2a9c032c1ed212fc_full.jpg" },
     { steamId: "", name: "toshiba", avatar: "https://avatars.fastly.steamstatic.com/09dee4b78688c03e6e1181947f9f7ecbd73ce018_full.jpg" }
   ];
 
